external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_named_match.snap
error[E04016]: too few arguments
  ┌─ tests/move_2024/matching/invalid_named_match.move:9:13
  │
9 │             Entry::One => ()
  │             ^^^^^^^^^^ Missing pattern for field 'x' in '0x42::m::Entry::One'

